--- a/examples/todos/todos.css
+++ b/examples/todos/todos.css
@@ -107,7 +107,7 @@ html {
       padding: 0;
       border-bottom: 0;
     }
-  #todo-list .editing .display,
+  #todo-list .editing .display *,
   #todo-list .edit {
     display: none;
   }
@@ -154,6 +154,10 @@ html {
     }
     #todo-list .todo-destroy:hover {
       background-position: 0 -20px;
+    }
+
+    #todo-list li.editing .todo-destroy {
+      display: block;
     }
 
 #todo-stats {
